--- a/prj.conf
+++ b/prj.conf
@@ -1,1 +1,23 @@
+# For peripherals
+CONFIG_GPIO=y
+CONFIG_SPI=y
 
+# For RTT logging
+CONFIG_LOG=y
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_LOG_BACKEND_RTT=y
+CONFIG_LOG_BACKEND_UART=n
+CONFIG_LOG_PRINTK=n
+
+# For BLE
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_DEVICE_NAME="NML"
+CONFIG_BT_DEVICE_APPEARANCE=0
+
+CONFIG_BT_ZEPHYR_NUS=y
+
+# CONFIG_LOG=y
+# CONFIG_LOG_DEFAULT_LEVEL=4   
+# CONFIG_LOG_MODE_DEFERRED=y   
+# CONFIG_LOG_PRINTK=y  
