Update COM Port read-write code

--- a/prj.conf
+++ b/prj.conf
@@ -1,6 +1,7 @@
 # For peripherals
 CONFIG_GPIO=y
 CONFIG_SPI=y
+CONFIG_ADC=y
 
 # For RTT logging
 CONFIG_LOG=y
@@ -8,14 +9,18 @@ CONFIG_USE_SEGGER_RTT=y
 CONFIG_LOG_BACKEND_RTT=y
 CONFIG_LOG_BACKEND_UART=n
 CONFIG_LOG_PRINTK=n
+CONFIG_CBPRINTF_FP_SUPPORT=y
 
 # For BLE
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="NML"
 CONFIG_BT_DEVICE_APPEARANCE=0
+# CONFIG_BT_CONN=y
 
-CONFIG_BT_ZEPHYR_NUS=y
+# CONFIG_BT_ZEPHYR_NUS=y
+
+CONFIG_PM_DEVICE=y
 
 # CONFIG_LOG=y
 # CONFIG_LOG_DEFAULT_LEVEL=4   
